--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -3,9 +3,7 @@
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">
-					<content>
-						<Text text="Test"/>
-					</content>
+					<content></content>
 				</Page>
 			</pages>
 		</App>
