--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -5,6 +5,8 @@
 				<Page id="page" title="{i18n>title}">
 					<content>
 						<Input id="text"/>
+						<Text text="test"/>
+						<Table></Table>
 					</content>
 				</Page>
 			</pages>
