--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -7,6 +7,7 @@
 						<Input id="text"/>
 						<Text text="test"/>
 						<Table></Table>
+						<Carousel></Carousel>
 					</content>
 				</Page>
 			</pages>
