--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -8,6 +8,7 @@
 						<Text text="test"/>
 						<Table></Table>
 						<Carousel></Carousel>
+						<Text></Text>
 					</content>
 				</Page>
 			</pages>
